Fix Info.plist executable and ignore Xcode user files

--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,11 @@
 DerivedData/
 .derivedData/
 *.xcuserstate
-*.xcuserdata/
+xcuserdata/
+*.xcworkspace/
 *.moved-aside
 *.xccheckout
 *.xcscmblueprint
 
 # macOS
 .DS_Store
-
